major changes + dark/light mode added

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -1,11 +1,9 @@
 {
-    "labels": {
-        "Team": "équipe",
-        "Home": "Home",
-        "About": "a propos",
-        "ContactUs": "contactez nos",
-        "Services":"Services"
-    
-    
-    
-        }}
+  "labels": {
+    "Team": "équipe",
+    "Home": "Acceuil",
+    "About": "à propos",
+    "ContactUs": "contactez-nous",
+    "Services": "Services"
+  }
+}
