added many changes that concern the Design

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -9,7 +9,7 @@
 
   "hero": {
     "slogan": "FOR EVERY PROBLEM, WE ENGINEER A SOLUTION",
-    "text": "Teaming up with Junior enterprise ENSA Agadir is your way to get hold of a wide range of skills provided by future engineers in different fields.",
+    "text": "Teaming up with Junior Enterprise ENSA Agadir is your way to get hold of a wide range of skills provided by future engineers in different fields.",
     "contact": "Contact us!",
     "video": "Watch a video"
   },
