--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -15,12 +15,12 @@
   },
 
   "cjem": {
-    "title": "WHAT IS CJEM?",
+    "title": "WHAT IS CJEM",
     "text": "JEEA operates under the umbrella of CJEM (Confédération Marocaine des Juniors Entrepreneurs),which is the founder structure of the Junior-Entrepreneurship movement in Morocco, with the aim of promoting the concept of JE's at the national level, but also to ensure that the status of Junior Enterprises is legally recognized and valued by companies. For more information: https://cjem.ma/"
   },
 
   "jeea": {
-    "title": "WHO ARE WE?",
+    "title": "WHO ARE WE",
     "text": "The JEEA (Junior Enterprise ENSA Agadir) is a branch of the JE (Junior Enterprise), whose primary goal is to refine the skills of young entrepreneurs in order to enrich their profiles before integrating the professional world. It is a consulting firm that was founded by the students of ENSA-A, in order to help students to integrate entrepreneurship by offering them the possibility to test their skills and put them to work according to the business standards. JEEA thus offers a unique opportunity for new junior-entrepreneurs to enter the job market and start their professional career. On the other hand, it provides aquality service to companies in order to meet the needs of clients in different fields."
   },
 
