--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -15,13 +15,13 @@
   },
 
   "cjem": {
-    "title": "C'EST QUOI CJEM?",
+    "title": "C'EST QUOI CJEM",
     "text": "CJEM (Confédération des Juniors Entreprises Marocaines) est la structure fédératrice du mouvement Junior-Entrepreneuriat à l'échelle marocaine dans le but de promouvoir le concept des JEs (Junior Enterprises) au niveau national, mais aussi faire en sorte que le statut du JE soit juridiquement reconnu et valorisé auprès des entreprises. Pour plus d'informations : https://cjem.ma/"
   },
 
   "jeea": {
-    "title": "QUI SOMMES NOUS?",
-    "text": "La JEEA est une extension de la JE (Junior Entreprise), dont le but prioritaire est d'affiner les compétences des jeunes entrepreneurs pour enrichir leur côté professionnel avant leur intégration dans le marché. La JEEA a vu le jour grâce aux étudiants de l'ENSA-A, afin  d’aider les étudiants contemporains à intégrer le monde de l' entrepreneuriat en offrant aux nouveaux entrepreneurs adhérents la possibilité de tester leurs compétences et de les mettre au travail. La JEEA opère sous la tutelle de la CJEM afin de maintenir un niveau de professionnalisme adéquat, et d'affiner davantage les compétences des jeunes entrepreneurs et assurer un environnement professionnel et une expérience unique."
+    "title": "QUI SOMMES NOUS",
+    "text": "La JEEA est une extension de la Junior Entreprise, dont le but crucial est d'affiner les compétences de ses jeunes entrepreneurs pour enrichir leur côté professionnel avant leur intégration au marché. La JEEA est un bureau d'études qui a apparu grâce aux efforts des étudiants d'ENSA-A, ses activités permettent aux adhérents de s'auto évaluer au niveau des compétences en offrant une opportunité de pénétrer facilement le marché de travail, et de rendre des services de qualité à ses clients."
   },
 
   "services": {
