--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -37,5 +37,10 @@
     "title": "CONTACT US",
     "text": "Entrust your projects to our students",
     "button": "SUBMIT"
+  },
+
+  "recrute": {
+    "title": "RECRUITEMENT",
+    "form": "Form"
   }
 }
