--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -4,6 +4,8 @@
     "Home": "Home",
     "About": "About",
     "signup": "Sign up",
+    "login": "Login",
+    "logout": "Logout",
     "Services": "Services"
   },
 
