--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -6,7 +6,8 @@
     "signup": "Sign up",
     "login": "Login",
     "logout": "Logout",
-    "Services": "Services"
+    "Services": "Services",
+    "more": "Learn more ..."
   },
 
   "hero": {
