--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -6,7 +6,8 @@
     "signup": "S'inscrire",
     "login": "Se connecter",
     "logout": "se déconnceter",
-    "Services": "Services"
+    "Services": "Services",
+    "more": "Voir plus ..."
   },
 
   "hero": {
