--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -44,6 +44,7 @@
 
   "recrute": {
     "title": "RECRUITEMENT",
-    "form": "Form"
+    "form": "Form",
+    "link": "Click here to redirect to the form"
   }
 }
